--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -53,7 +53,7 @@
          <span class="icon-bar"></span>
          <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" src="{% static 'images/logo.png' %}" href="{% url 'blog' %}">Storm Chasers Blog</a>
+      <a class="navbar-brand" src="{% static 'images/logo.png' %}" href="{% url 'blog' %}">Storm Chasers Hub</a>
        <!--<img src="{% static 'images/logo.png' %}" height="60" width="60" >-->
 
    </div>
@@ -108,7 +108,7 @@
 </div>
 </body>
 
-    <div class="content container">
+    <div class="content container" align="center">
         <div class="row">
             <div class="col-md-8">
                 {% block content %}
