--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -1,26 +1,11 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-    <!--<meta charset="UTF-8">-->
-    <!--<title>Blog</title>-->
-    <!--<h1>Blog</h1>-->
-
-
-
-<!--</head>-->
-<!--<body>-->
-
-<!--</body>-->
-<!--</html>-->
 
 <!DOCTYPE html>
 <html>
 <title>W3.CSS Template</title>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
@@ -29,14 +14,16 @@
 h1,h2,h3,h4,h5,h6 {font-family: "Oswald"}
 body {font-family: "Open Sans"}
 header {background-image: url("/static/images/blog_top.jpg");
-        background-size: cover;}
-
+        background-size:100% 100%;
+        background-repeat: no-repeat;
+        }
+.content {margin: auto;}
 </style>
 <body class="w3-light-grey">
 
 <!-- Navigation bar with social media icons -->
 <div class="w3-bar w3-black w3-hide-small">
-  <a href="#" class="w3-bar-item w3-button"><i class="fa fa-facebook-official"></i></a>
+  <a href="https://www.facebook.com/StormChasers/" class="w3-bar-item w3-button"><i class="fa fa-facebook-official"></i></a>
   <a href="#" class="w3-bar-item w3-button"><i class="fa fa-instagram"></i></a>
   <a href="#" class="w3-bar-item w3-button"><i class="fa fa-snapchat"></i></a>
   <a href="#" class="w3-bar-item w3-button"><i class="fa fa-flickr"></i></a>
@@ -46,12 +33,12 @@ header {background-image: url("/static/images/blog_top.jpg");
 
 <!-- w3-content defines a container for fixed size centered content,
 and is wrapped around the whole page content, except for the footer in this example -->
-<div class="w3-content" style="max-width:1600px">
+<div class="w3-content" style="max-width:1600px;" align="center">
 
   <!-- Header -->
   <header class="w3-container w3-center w3-padding-48 w3-white">
-    <h1 class="w3-xxxlarge" style="color: #fcfcfc;"><b>Storm Chasers</b></h1>
-    <h5 style="color: #d2d2d8;">Largest online community of <span class="w3-tag">Storm Experts</span></h5>
+    <h1 class="w3-xxxlarge" style="color: #f4f4f4;"><b>Storm Chasers Hub</b></h1>
+    <h5 style="color: #f4f4f4;">Largest online community of <span class="w3-tag">Storm Experts</span></h5>
   </header>
 
   <!-- Image header -->
@@ -65,13 +52,12 @@ and is wrapped around the whole page content, except for the footer in this exam
   <!--</header>-->
 
   <!-- Grid -->
-  <div class="w3-row w3-padding w3-border">
-
+    <div class="w3-row w3-padding w3-border w3-center">
     <!-- Blog entries -->
-    <div class="w3-col l8 s12">
+    <div class="w3-col w3-center">
 
       <!-- Blog entry -->
-      <div class="w3-container w3-white w3-margin w3-padding-large">
+      <div class="w3-container w3-white w3-margin w3-padding-large w3-center">
         <div class="w3-center">
           <h3>TITLE HEADING</h3>
           <h5>Title description, <span class="w3-opacity">May 2, 2016</span></h5>
@@ -194,128 +180,128 @@ and is wrapped around the whole page content, except for the footer in this exam
     </div>
 
     <!-- About/Information menu -->
-    <div class="w3-col l4">
-      <!-- About Card -->
-      <div class="w3-white w3-margin">
-        <img src="/w3images/avatar_girl2.jpg" alt="Jane" style="width:100%" class="w3-grayscale">
-        <div class="w3-container w3-black">
-          <h4>My Name</h4>
-          <p>Just me, myself and I, exploring the universe of uknownment. I have a heart of love and a interest of lorem ipsum and mauris neque quam blog. I want to share my world with you.</p>
-        </div>
-      </div>
-      <hr>
+    <!--<div class="w3-col l4">-->
+      <!--&lt;!&ndash; About Card &ndash;&gt;-->
+      <!--<div class="w3-white w3-margin">-->
+        <!--<img src="/w3images/avatar_girl2.jpg" alt="Jane" style="width:100%" class="w3-grayscale">-->
+        <!--<div class="w3-container w3-black">-->
+          <!--<h4>My Name</h4>-->
+          <!--<p>Just me, myself and I, exploring the universe of uknownment. I have a heart of love and a interest of lorem ipsum and mauris neque quam blog. I want to share my world with you.</p>-->
+        <!--</div>-->
+      <!--</div>-->
+      <!--<hr>-->
 
-      <!-- Posts -->
-      <div class="w3-white w3-margin">
-        <div class="w3-container w3-padding w3-black">
-          <h4>Popular Posts</h4>
-        </div>
-        <ul class="w3-ul w3-hoverable w3-white">
-          <li class="w3-padding-16">
-            <img src="/w3images/avatar_smoke.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-            <span class="w3-large">Denim</span>
-            <br>
-            <span>Sed mattis nunc</span>
-          </li>
-          <li class="w3-padding-16">
-            <img src="/w3images/bandmember.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-            <span class="w3-large">Sweaters</span>
-            <br>
-            <span>Praes tinci sed</span>
-          </li>
-          <li class="w3-padding-16">
-            <img src="/w3images/workshop.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
-            <span class="w3-large">Workshop</span>
-            <br>
-            <span>Ultricies congue</span>
-          </li>
-          <li class="w3-padding-16">
-            <img src="/w3images/avatar_smoke.jpg" alt="Image" class="w3-left w3-margin-right w3-sepia" style="width:50px">
-            <span class="w3-large">Trends</span>
-            <br>
-            <span>Lorem ipsum dipsum</span>
-          </li>
-        </ul>
-      </div>
-      <hr>
+      <!--&lt;!&ndash; Posts &ndash;&gt;-->
+      <!--<div class="w3-white w3-margin">-->
+        <!--<div class="w3-container w3-padding w3-black">-->
+          <!--<h4>Popular Posts</h4>-->
+        <!--</div>-->
+        <!--<ul class="w3-ul w3-hoverable w3-white">-->
+          <!--<li class="w3-padding-16">-->
+            <!--<img src="/w3images/avatar_smoke.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">-->
+            <!--<span class="w3-large">Denim</span>-->
+            <!--<br>-->
+            <!--<span>Sed mattis nunc</span>-->
+          <!--</li>-->
+          <!--<li class="w3-padding-16">-->
+            <!--<img src="/w3images/bandmember.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">-->
+            <!--<span class="w3-large">Sweaters</span>-->
+            <!--<br>-->
+            <!--<span>Praes tinci sed</span>-->
+          <!--</li>-->
+          <!--<li class="w3-padding-16">-->
+            <!--<img src="/w3images/workshop.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">-->
+            <!--<span class="w3-large">Workshop</span>-->
+            <!--<br>-->
+            <!--<span>Ultricies congue</span>-->
+          <!--</li>-->
+          <!--<li class="w3-padding-16">-->
+            <!--<img src="/w3images/avatar_smoke.jpg" alt="Image" class="w3-left w3-margin-right w3-sepia" style="width:50px">-->
+            <!--<span class="w3-large">Trends</span>-->
+            <!--<br>-->
+            <!--<span>Lorem ipsum dipsum</span>-->
+          <!--</li>-->
+        <!--</ul>-->
+      <!--</div>-->
+      <!--<hr>-->
 
-      <!-- Advertising -->
-      <div class="w3-white w3-margin">
-        <div class="w3-container w3-padding w3-black">
-          <h4>Advertise</h4>
-        </div>
-        <div class="w3-container w3-white">
-          <div class="w3-container w3-display-container w3-light-grey w3-section" style="height:200px">
-            <span class="w3-display-middle">Your AD Here</span>
-          </div>
-        </div>
-      </div>
-      <hr>
+      <!--&lt;!&ndash; Advertising &ndash;&gt;-->
+      <!--<div class="w3-white w3-margin">-->
+        <!--<div class="w3-container w3-padding w3-black">-->
+          <!--<h4>Advertise</h4>-->
+        <!--</div>-->
+        <!--<div class="w3-container w3-white">-->
+          <!--<div class="w3-container w3-display-container w3-light-grey w3-section" style="height:200px">-->
+            <!--<span class="w3-display-middle">Your AD Here</span>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
+      <!--<hr>-->
 
-      <!-- Tags -->
-      <div class="w3-white w3-margin">
-        <div class="w3-container w3-padding w3-black">
-          <h4>Tags</h4>
-        </div>
-        <div class="w3-container w3-white">
-          <p>
-            <span class="w3-tag w3-black w3-margin-bottom">Fashion</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">New York</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">London</span>
-            <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Hats</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Norway</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Sweaters</span>
-            <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Ideas</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Deals</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Accessories</span>
-            <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">News</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Clothing</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Shopping</span>
-            <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Jeans</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Trends</span>
-          </p>
-        </div>
-      </div>
-      <hr>
+      <!--&lt;!&ndash; Tags &ndash;&gt;-->
+      <!--<div class="w3-white w3-margin">-->
+        <!--<div class="w3-container w3-padding w3-black">-->
+          <!--<h4>Tags</h4>-->
+        <!--</div>-->
+        <!--<div class="w3-container w3-white">-->
+          <!--<p>-->
+            <!--<span class="w3-tag w3-black w3-margin-bottom">Fashion</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">New York</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">London</span>-->
+            <!--<span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Hats</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Norway</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Sweaters</span>-->
+            <!--<span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Ideas</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Deals</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Accessories</span>-->
+            <!--<span class="w3-tag w3-light-grey w3-small w3-margin-bottom">News</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Clothing</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Shopping</span>-->
+            <!--<span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Jeans</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Trends</span>-->
+          <!--</p>-->
+        <!--</div>-->
+      <!--</div>-->
+      <!--<hr>-->
 
-      <!-- Inspiration -->
-      <div class="w3-white w3-margin">
-        <div class="w3-container w3-padding w3-black">
-          <h4>Inspiration</h4>
-        </div>
-        <div class="w3-row-padding w3-white">
-          <div class="w3-col s6">
-            <p><img src="/w3images/jeans.jpg" alt="Jeans" style="width:100%"></p>
-            <p><img src="/w3images/team1.jpg" alt="Jeans" style="width:100%"></p>
-          </div>
-          <div class="w3-col s6">
-            <p><img src="/w3images/avatar_hat.jpg" alt="Men in Hats" style="width:100%" class="w3-grayscale"></p>
-            <p><img src="/w3images/team4.jpg" alt="Jeans" style="width:100%"></p>
-         </div>
-        </div>
-      </div>
-      <hr>
+      <!--&lt;!&ndash; Inspiration &ndash;&gt;-->
+      <!--<div class="w3-white w3-margin">-->
+        <!--<div class="w3-container w3-padding w3-black">-->
+          <!--<h4>Inspiration</h4>-->
+        <!--</div>-->
+        <!--<div class="w3-row-padding w3-white">-->
+          <!--<div class="w3-col s6">-->
+            <!--<p><img src="/w3images/jeans.jpg" alt="Jeans" style="width:100%"></p>-->
+            <!--<p><img src="/w3images/team1.jpg" alt="Jeans" style="width:100%"></p>-->
+          <!--</div>-->
+          <!--<div class="w3-col s6">-->
+            <!--<p><img src="/w3images/avatar_hat.jpg" alt="Men in Hats" style="width:100%" class="w3-grayscale"></p>-->
+            <!--<p><img src="/w3images/team4.jpg" alt="Jeans" style="width:100%"></p>-->
+         <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
+      <!--<hr>-->
 
-      <div class="w3-white w3-margin">
-        <div class="w3-container w3-padding w3-black">
-          <h4>Follow Me</h4>
-        </div>
-        <div class="w3-container w3-xlarge w3-padding">
-          <i class="fa fa-facebook-official w3-hover-opacity"></i>
-          <i class="fa fa-instagram w3-hover-opacity"></i>
-          <i class="fa fa-snapchat w3-hover-opacity"></i>
-          <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-          <i class="fa fa-twitter w3-hover-opacity"></i>
-          <i class="fa fa-linkedin w3-hover-opacity"></i>
-        </div>
-      </div>
-      <hr>
+      <!--<div class="w3-white w3-margin">-->
+        <!--<div class="w3-container w3-padding w3-black">-->
+          <!--<h4>Follow Me</h4>-->
+        <!--</div>-->
+        <!--<div class="w3-container w3-xlarge w3-padding">-->
+          <!--<i class="fa fa-facebook-official w3-hover-opacity"></i>-->
+          <!--<i class="fa fa-instagram w3-hover-opacity"></i>-->
+          <!--<i class="fa fa-snapchat w3-hover-opacity"></i>-->
+          <!--<i class="fa fa-pinterest-p w3-hover-opacity"></i>-->
+          <!--<i class="fa fa-twitter w3-hover-opacity"></i>-->
+          <!--<i class="fa fa-linkedin w3-hover-opacity"></i>-->
+        <!--</div>-->
+      <!--</div>-->
+      <!--<hr>-->
 
-      <!-- Subscribe -->
-      <div class="w3-white w3-margin">
-        <div class="w3-container w3-padding w3-black">
-          <h4>Subscribe</h4>
-        </div>
-        <div class="w3-container w3-white">
-          <p>Enter your e-mail below and get notified on the latest blog posts.</p>
-          <p><input class="w3-input w3-border" type="text" placeholder="Enter e-mail" style="width:100%"></p>
-          <p><button type="button" onclick="document.getElementById('subscribe').style.display='block'" class="w3-button w3-block w3-red">Subscribe</button></p>
-        </div>
-      </div>
+      <!--&lt;!&ndash; Subscribe &ndash;&gt;-->
+      <!--<div class="w3-white w3-margin">-->
+        <!--<div class="w3-container w3-padding w3-black">-->
+          <!--<h4>Subscribe</h4>-->
+        <!--</div>-->
+        <!--<div class="w3-container w3-white">-->
+          <!--<p>Enter your e-mail below and get notified on the latest blog posts.</p>-->
+          <!--<p><input class="w3-input w3-border" type="text" placeholder="Enter e-mail" style="width:100%"></p>-->
+          <!--<p><button type="button" onclick="document.getElementById('subscribe').style.display='block'" class="w3-button w3-block w3-red">Subscribe</button></p>-->
+        <!--</div>-->
+      <!--</div>-->
 
-    <!-- END About/Intro Menu -->
-    </div>
+    <!--&lt;!&ndash; END About/Intro Menu &ndash;&gt;-->
+    <!--</div>-->
 
   <!-- END GRID -->
   </div>
