--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -70,27 +70,27 @@ and is wrapped around the whole page content, except for the footer in this exam
           <h5>{{ post.author }}<span class="w3-opacity">{{ post.published_date }}</span></h5>
         </div>
         </a>
-
-        {% for blogImages in post.image_set.all %}
+        <!-- This is how I am limiting the main blog page images to one image -->
+        {% for blogImages in post.image_set.all|slice:":1" %}
         <div></div>
         <div class="w3-justify">
           <img src="{{ blogImages.image.url }}" alt="{{ blogImages.image.name }}" style="width:100%" class="w3-padding-16">
 
           {% endfor %}
           <p>{{ post.text }}</p>
-          <p class="w3-left"><button class="w3-button w3-white w3-border" onclick="likeFunction(this)"><b><i class="fa fa-thumbs-up"></i> Like</b></button></p>
-          <p class="w3-right"><button class="w3-button w3-black" onclick="myFunction('demo1')" id="myBtn"><b>Replies  </b> <span class="w3-tag w3-white">1</span></button></p>
-          <p class="w3-clear"></p>
-          <div class="w3-row w3-margin-bottom" id="demo1" style="display:none">
-            <hr>
-              <div class="w3-col l2 m3">
-                <img src="{{ blogImages.image.url }}" style="width:90px;">
-              </div>
-              <div class="w3-col l10 m9">
-                <h4>George <span class="w3-opacity w3-medium">May 3, 2015, 6:32 PM</span></h4>
-                <p>Great blog post! Following</p>
-              </div>
-          </div>
+          <!--<p class="w3-left"><button class="w3-button w3-white w3-border" onclick="likeFunction(this)"><b><i class="fa fa-thumbs-up"></i> Like</b></button></p>-->
+          <!--<p class="w3-right"><button class="w3-button w3-black" onclick="myFunction('demo1')" id="myBtn"><b>Replies  </b> <span class="w3-tag w3-white">1</span></button></p>-->
+          <!--<p class="w3-clear"></p>-->
+          <!--<div class="w3-row w3-margin-bottom" id="demo1" style="display:none">-->
+            <!--<hr>-->
+              <!--<div class="w3-col l2 m3">-->
+                <!--<img src="{{ blogImages.image.url }}" style="width:90px;">-->
+              <!--</div>-->
+              <!--<div class="w3-col l10 m9">-->
+                <!--<h4>George <span class="w3-opacity w3-medium">May 3, 2015, 6:32 PM</span></h4>-->
+                <!--<p>Great blog post! Following</p>-->
+              <!--</div>-->
+          <!--</div>-->
         </div>
       </div>
       <hr>
