--- a/blog/templates/blog/new_post.html
+++ b/blog/templates/blog/new_post.html
@@ -12,37 +12,50 @@
 <body>
 
 
-    <!--<form method="post" class="post-form">{% csrf_token %}-->
-        <!--{{ form.as_p }}-->
-        <!--<button type="submit" class="save btn btn-default">Save</button>-->
-    <!--</form>-->
-
                  <!--Upload form. Note enctype attribute! -->
-                <form action="{% url 'new_post' %}" method="post" enctype="multipart/form-data">
-                        {% csrf_token %}
-                        <h5>Post Title</h5>
-                        <p>{{ postForm.title }}</p>
-                        <h5>Post Text</h5>
-                        <p>{{ postForm.text }}</p>
+                <!--<form action="{% url 'new_post' %}" method="post" enctype="multipart/form-data">-->
+                        <!--{% csrf_token %}-->
+                        <!--<h5>Post Title</h5>-->
+                        <!--<p>{{ postForm.title }}</p>-->
+                        <!--<h5>Post Text</h5>-->
+                        <!--<p>{{ postForm.text }}</p>-->
 
-                        <!--<p>{{ imageForm.non_field_errors }}</p>-->
-                        <p>{{ imageForm.image.label_tag }} </p>
-                        <p>
-                                <!--{{ imageForm.image.errors }}-->
-                                {{ imageForm.image }}
-                        </p>
+                        <!--&lt;!&ndash;<p>{{ imageForm.non_field_errors }}</p>&ndash;&gt;-->
+                        <!--<p>{{ imageForm.image.label_tag }} </p>-->
+                        <!--<p>-->
+                                <!--&lt;!&ndash;{{ imageForm.image.errors }}&ndash;&gt;-->
+                                <!--{{ imageForm.image }}-->
+                        <!--</p>-->
 
-                        <p><input type="submit" value="Upload" /></p>
-                </form>
+                        <!--<p><input type="submit" value="Upload" /></p>-->
+                <!--</form>-->
+
+
+
+<form id="post_form" method="post" action="" enctype="multipart/form-data">
+    {% csrf_token %}
+    <h5>Post Title</h5>
+
+    {% for hidden in postForm.hidden_fields %}
+        {{ hidden }}
+    {% endfor %}
+
+    {% for field in postForm %}
+        {{ field }} <br />
+    {% endfor %}
+
+<div class="container">
+  <p class="bg-primary">Your First Image Uploaded Will Appear on the Main Blog Page</p>
+</div>
+    {{ formset.management_form }}
+    {% for form in formset %}
+        {{ form }}
+    {% endfor %}
+    <input type="submit" name="submit" value="Submit" />
+</form>
 
         </body>
 
-
-  <!--<form action="{% url 'new_post' %}" method="post" enctype="multipart/form-data">-->
-    <!--{% csrf_token %}-->
-    <!--<input id="id_image" type="file" name="myfile">-->
-    <!--<button type="submit">BAD ONE</button>-->
-  <!--</form>-->
 
   {% if uploaded_file_url %}
     <p>File uploaded at: <a href="{{ uploaded_file_url }}">{{ uploaded_file_url }}</a></p>
