--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,6 +1,32 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
+
+<head>
+<style>
+div.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+}
+
+div.gallery:hover {
+    border: 1px solid #777;
+}
+
+div.gallery img {
+    width: 100%;
+    height: auto;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
+</style>
+</head>
+
     <div class="post">
         {% if post.published_date %}
             <div class="date">
@@ -14,7 +40,14 @@
         <p>{{ post.text|linebreaksbr }}</p>
 
         {% for image in images %}
-        <div><img src="{{ image.image.url }} "></div>
+        <div class="gallery">
+  <a target="_blank" href="{{ image.image.url }}">
+    <img src="{{ image.image.url }}" alt="{{ image.image.name }}" width="300" height="200">
+  </a>
+  <!--<div class="desc">Add a description of the image here</div>-->
+</div>
+
+        <!--<div><img src="{{ image.image.url }} "></div>-->
         {% endfor %}
 
     </div>
