--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -68,14 +68,28 @@
       <div class="navbar navbar-right">
           <!--<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>-->
           {% if user.is_authenticated %}
-          <a href="{% url 'logout' %}">
-          <button type="submit" class="btn btn-success" style="padding: 14px 20px">Logout
-          </button></a>
-          {% else %}
-           <a href="{% url 'login' %}">
-              <button type="submit" class="btn btn-primary" style="padding: 14px">Sign In / Up
-           </button></a>
-          {% endif %}
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li><a href="{% url 'logout' %}"><i class="fa fa-btn fa-sign-out"></i>Logout</a></li>
+                            <div class="w-100"></div>
+                                <div class="col">
+
+                                    <br><br>
+                                    <h5 style="text-align:center;">Account Management</h5>
+                                    <p style="text-align:center;"><a  class="btn btn-raised rounded btn-warning btn-sm"
+                                                        href="{% url 'password_change' %}">Change Password</a><br></p>
+                                </div>
+
+                            <div class="w-100"></div>
+                        </ul>
+                    </li>
+                {% else %}
+                    <li><a href="{% url 'login' %}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                    <li><a class="btn rounded btn-outline-info btn-sm" href="{% url 'register' %}" role="button">Register</a>
+                {% endif %}
       </div>
 </div>
 </div>
