--- a/blog/templates/blog/my_profile.html
+++ b/blog/templates/blog/my_profile.html
@@ -7,6 +7,12 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <h1>My Profile</h1>
+
+    <h3>User Name: {{ user.username }}</h3>
+    <h3>First Name: {{ user.first_name }}</h3>
+    <h3>Last Name: {{ user.last_name }}</h3>
+    <h3>Email:  {{ user.email }}</h3>
+
 </head>
 <body>
 
