--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -6,11 +6,39 @@
 <head>
     <meta charset="UTF-8">
     <title>Storm Chasers Blog</title>
-    <h1>Homepage</h1>
-    <iframe src="http://www.youtube.com/embed/?listType=user_uploads&list=THEWEATHERCHANNEL" width="480" height="400"></iframe>
+
 </head>
 <body>
-
+<body>
+    <div id="main">
+        <div id="banner"><img src="static/images/blog_top.jpg" alt="" height="100%" width="100%"></div>
+        <div class="row1">
+            <div class="col1">
+                <h3>About Us</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                <a>Learn More</a>
+                </p>
+                <h4><a>Check Out Our Blog</a></h4>
+            </div>
+            <div class="col2">
+                <h3>Weather Channel</h3>
+                <iframe src="http://www.youtube.com/embed/?listType=user_uploads&list=THEWEATHERCHANNEL" width="348" height="348"></iframe>
+            </div>
+        </div>
+        <div class="row2">
+            <div class="col1">
+                <h3>Pictures from the Field</h3>
+                <iframe width="348" height="348" src="http://s350.photobucket.com/user/CodeChasers8310/embed/slideshow/"></iframe>
+            </div>
+            <div class="col2">
+                <H3>Follow Us on Twitter</H3>
+               <a class="twitter-timeline" data-width="348" data-height="348" href="https://twitter.com/CodeChasers8310?ref_src=twsrc%5Etfw">Tweets by CodeChasers8310</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
 {% endblock %}
