--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -69,10 +69,10 @@
       </ul>
       <div class="navbar navbar-right">
           {% if user.is_authenticated %}
-              <a href="{% url 'logout' %}"><i class="btn rounded btn-outline-info btn-sm"></i>Logout</a>
-              <a  class="btn rounded btn-outline-info btn-sm" href="{% url 'password_change' %}">Change Password</a>
+              <a href="{% url 'logout' %}" style="color:#3d83e5;"><i class="btn rounded btn-outline-info btn-sm"></i>Logout</a>
+              <a  class="btn rounded btn-outline-info btn-sm" href="{% url 'password_change' %}" style="color:#3d83e5;">Change Password</a>
           {% else %}
-              <a href="{% url 'login' %}"><span class="btn rounded btn-outline-info btn-sm"></span> Login</a>
+              <a href="{% url 'login' %}" style="color:#3d83e5;"    ><span class="btn rounded btn-outline-info btn-sm"></span> Login</a>
               <a class="btn rounded btn-outline-info btn-sm" href="{% url 'register' %}" role="button">Register</a>
           {% endif %}
       </div>
