--- a/blog/templates/blog/dashboard.html
+++ b/blog/templates/blog/dashboard.html
@@ -178,7 +178,40 @@
 <div id="map-canvas"></div>
 <div><h1>5 Day Weather Forecast</h1></div>
 
+<div class="container">
+  <table class="table table-condensed">
+    <thead>
+      <tr>
+        <th>Time</th>
+        <th>Main Temp</th>
+        <th>Min Temp</th>
+          <th>Max Temp</th>
+          <th>Pressure</th>
+          <th></th>
+          <th>Clouds</th>
+          <th>Wind Speed</th>
+          <th>Wind Dir</th>
 
-</body>
-</html>
+
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>John</td>
+        <td>Doe</td>
+        <td>john@example.com</td>
+      </tr>
+      <tr>
+        <td>Mary</td>
+        <td>Moe</td>
+        <td>mary@example.com</td>
+      </tr>
+      <tr>
+        <td>July</td>
+        <td>Dooley</td>
+        <td>july@example.com</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 {% endblock %}
