--- a/blog/templates/blog/my_profile.html
+++ b/blog/templates/blog/my_profile.html
@@ -12,6 +12,11 @@
     <h3>First Name: {{ user.first_name }}</h3>
     <h3>Last Name: {{ user.last_name }}</h3>
     <h3>Email:  {{ user.email }}</h3>
+    <h3>Address: {{ profile.address }}</h3>
+    <h3>City: {{ profile.city }}</h3>
+    <h3>Zipcode: {{ profile.zipcode }}</h3>
+
+You can <a href="{% url "edit" %}">edit your profile</a> or <a href="{% url "password_change" %}">change your password</a>.</p>
 
 </head>
 <body>
