--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -1,52 +1,23 @@
 {% extends "blog/base.html" %}
 
+{% block title %}Log-in{% endblock %}
+
 {% block content %}
-<h1 style="text-align:center; font-family:LemonMilk; font-size: 27px">Sign in</h1><br>
-        <div class="row">
-            <div class="col">
-
-                {% if form.errors %}
-                    <p>Your username and password didn't match. Please try again.</p>
-                {% endif %}
-                <div class="form-group">
-                <form method="post" action="{% url 'login' %}">
-                {% csrf_token %}
-
-                    <div class="form-group">
-                      <label for="{{ form.username.label_tag }}</label>
-                      <input type="text" class="form-control" id="{{ form.username }}
-                      <small id="emailHelp" class="form-text text-muted"</small>
-                    </div>
-                    <div class="form-group">
-                      <label for="{{ form.password.label_tag }}</label>
-                      <input type="password" class="form-control" id="{{ form.password }}
-                    </div><br>
-
-                    <!-- <button type="submit" class="btn btn-primary">Submit</button>
-
-
-
-
-
-
-                     <table>
-                         <tr>
-                             <td>{{ form.username.label_tag }}</td>
-                             <td>{{ form.username }}</td>
-                         </tr>
-                         <tr>
-                             <td>{{ form.password.label_tag }}</td>
-                             <td>{{ form.password }}</td>
-                         </tr>
-                    </table> -->
-
-              </form>
-              <div class="text-center">
-              <input class="btn btn-raised btn-success" type="submit" value="login"/>
-              <input type="hidden" name="next" value="{{ next }}"/>
-
-        <p><br><a href="{% url "password_reset" %}">Forgot password?</a></p>
-            </div>
-          </div>
-            </div>
+  <h1>Log-in</h1>
+  {% if form.errors %}
+    <p>
+      Your username and password didn't match.
+      Please try again.
+    </p>
+  {% else %}
+    <p>Please, use the following form to log-in:</p>
+  {% endif %}
+  <div class="login-form">
+    <form action="{% url 'login' %}" method="post">
+      {{ form.as_p }}
+      {% csrf_token %}
+      <input type="hidden" name="next" value="{{ next }}" />
+      <p><input type="submit" value="Log-in"></p>
+    </form>
+  </div>
 {% endblock %}
