--- a/blog/templates/blog/dashboard.html
+++ b/blog/templates/blog/dashboard.html
@@ -172,6 +172,7 @@
 {% if openFailure %}
 <div><h3 style="background-color: orange;">Search Failed - please try again</h3></div>
 {% endif %}
+
 <form id=search_form method="get" action="{% url 'get_forecast' %}">
 <div class="form-group" style="padding: 10px;">
 <div>
@@ -181,16 +182,37 @@
     <input type="text" size="15"  name="lon"  placeholder="Long">
 </div>
 <div style="padding: 10px;">
-    <input type="text" size="15"  name="zip"  value="{{ user.profile.zipcode }}">
+    <input type="text" size="15"  name="zip" placeholder="ZIP">
 </div>
-    <button type="submit" class="btn btn-primary">Go!</button>
+    <button type="submit" class="btn btn-primary" style="border-radius: 12px; width: 100px;">Go!</button>
 </div>
-
+    <div><h6>Enter For Historical Weather (Optional)</h6></div>
+<div style="padding: 10px;">
+    <input type="text" size="15"  name="year"  placeholder="Year - YYYY">
+    <input type="text" size="15"  name="month"  placeholder="Month - MM">
+    <input type="text" size="15"  name="day"  placeholder="Day - DD">
+</div>
 </form>
 
+<div class="w3-container" style="background-color: #7caeff;">
+{% if showingZIP %}
+<div><h3>Showing ZIP Code: {{ ZIP }}</h3></div>
+{% endif %}
+{% if showingLatLon %}
+<div><h3>Showing Lat Long: ({{ lat }}, {{ lon }})</h3></div>
+{% endif %}
+</div>
+
 <div><h1>Weather Map</h1></div>
-<div id="map-canvas"></div>
+<center>
+<p style="text-align: center">Uses Google Maps in conjunction with the OpenWeather API to show live conditions</p>
+</center>
+    <div id="map-canvas"></div>
+{% if displayFiveDayForecast %}
 <div><h1>5 Day Weather Forecast</h1></div>
+<center>
+<p style="text-align: center">Uses OpenWeather to get weather forecast</p>
+</center>
 <table class="table table-bordered table-hover table-striped" style="white-space: nowrap; width: 1%;">
   <thead style="background-color: #4289ed; color: white;">
     <tr>
@@ -200,7 +222,8 @@
     </tr>
   </thead>
   <tbody>
-  
+  {% endif %}
+
   {% for row in displayForecast|columns:10 %}
  <tr>
     {% for item in row %}
@@ -212,7 +235,11 @@
   </tbody>
 </table>
 
+{% if displayAlerts %}_
 <div><h1>Weather Alerts</h1></div>
+<center>
+<p style="text-align: center">Uses WeatherUnderGround to get weather alerts</p>
+</center>
 
 {% for alert in alertsForDisplay %}
 <!-- <span class="border border-dark"> -->
@@ -230,6 +257,48 @@
 </div>
 <!-- </span> -->
 {% endfor %}
+{% endif %}
+
+{% if displayHistorical %}_
+<div style="padding-top: 40px;"><h1>Weather History</h1></div>
+<center>
+<p style="text-align: center">Uses DarkSky Historical Weather API to get Average Weather Data for a past day</p>
+</center>
+<center>
+<p style="text-align: center; font-size: 24px;">Date: {{ year }}-{{ month }}-{{ day }}</p>
+</center>
+<div class="container-fluid" style="padding: 10px;">
+ <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th>Summary</th>
+        <th>Min Temp</th>
+        <th>Max Temp</th>
+          <th>Avg Temp</th>
+          <th>Avg Humidity</th>
+          <th>Avg Wind Speed</th>
+          <th>Avg Cloud Cover</th>
+          <th>Avg Precip Probability</th>
+          <th>Avg Precip Intensity</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>{{ darkSkyDisplayDict.summary }}</td>
+        <td>{{ darkSkyDisplayDict.minTempHistorical }}</td>
+        <td>{{ darkSkyDisplayDict.maxTempHistorical }}</td>
+        <td>{{ darkSkyDisplayDict.avgTempHistorical }}</td>
+        <td>{{ darkSkyDisplayDict.avgHumidity }}</td>
+        <td>{{ darkSkyDisplayDict.avgWindSpeed }}</td>
+        <td>{{ darkSkyDisplayDict.avgCloudCover }}</td>
+        <td>{{ darkSkyDisplayDict.avgPrecipProb }}</td>
+        <td>{{ darkSkyDisplayDict.avgPrecipIntensity }}</td>
+      </tr>
+    </tbody>
+  </table></div>
+{% endif %}
+
+
 {% endblock %}
 
 
